package org.infnet_dr2_tp1.models;

public class Book {
    private String title;
    private String author;
    private String isbn;
}
