package org.infnet_dr2_tp1.models;

public class User {
    private String name;
    private String id;
}
